test/end-to-end/runnable/operator-precedence.crow
import
	crow/io/print: out, print

main void() summon
	out print "{(1::nat64) * 2 + 3}"
	out print "{1::nat64 + 2 * 3}"
