test/end-to-end/compile-errors/duplicate-import.crow
import
	crow/math/math: pi, pi

main void()
	info log "{pi::float64}"
